--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="timer-button">10:00</div>
-      <div class="timer-button">10:00</div>
-      <div id="turn-number">Turn 1</div>
+      <div class="timer-button">5 Turns Left</div>
+      <div class="timer-button">5 Turns Left</div>
+      <div id="overlay"></div>
     </div>
   </body>
   <script src="index.js"></script>
