--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="timer-button">5 Turns Left</div>
-      <div class="timer-button">5 Turns Left</div>
+      <div id="player-2" class="timer-button">5 Turns Left</div>
+      <div id="player-1" class="timer-button">5 Turns Left</div>
       <div id="overlay"></div>
     </div>
   </body>
