--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
     <link rel="stylesheet" href="style.css" />
 
     <title>Document</title>
@@ -14,7 +15,11 @@
       <div id="player-2" class="timer-button">5 Turns Left</div>
       <div id="player-1" class="timer-button">5 Turns Left</div>
       <div id="overlay"></div>
+      <div id="cnv-container">
+        <canvas id="canvas"></canvas>
+      </div>
     </div>
   </body>
   <script src="index.js"></script>
+  <script src="sketch.js"></script>
 </html>
