--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
   <body>
     <div class="container">
       <div id="player-2" class="timer-button">5 Turns Left</div>
+      <div id="menu"><div id="reset-button">↺</div></div>
       <div id="player-1" class="timer-button">5 Turns Left</div>
       <div id="overlay"></div>
-      <div id="cnv-container">
-        <canvas id="canvas"></canvas>
-      </div>
+    </div>
+    <div id="cnv-container">
+      <canvas id="canvas"></canvas>
     </div>
   </body>
   <script src="index.js"></script>
