--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
   </head>
   <body>
     <div class="container">
-      <div id="player-2" class="timer-button">5 Turns Left</div>
+      <div id="player-2" class="timer-button">
+        <div id="p2-text">5 Turns Left</div>
+      </div>
       <div id="menu"><div id="reset-button">↺</div></div>
-      <div id="player-1" class="timer-button">5 Turns Left</div>
+      <div id="player-1" class="timer-button">
+        <div id="p1-text">5 Turns Left</div>
+      </div>
       <div id="overlay"></div>
     </div>
     <div id="cnv-container">
