--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
       </div>
       <div id="overlay"></div>
     </div>
-    <div id="cnv-container">
-      <canvas id="canvas"></canvas>
-    </div>
+    <div id="sketch-container"></div>
   </body>
   <script src="index.js"></script>
   <script src="sketch.js"></script>
